--- a/Backend/homeiq-backend/HomeIQ.API/HomeIQ.API.csproj
+++ b/Backend/homeiq-backend/HomeIQ.API/HomeIQ.API.csproj
@@ -7,16 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HomeIQ.Models\HomeIQ.Models.csproj" />
     <ProjectReference Include="..\HomeIQ.Services\HomeIQ.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
