--- a/Backend/homeiq-backend/HomeIQ.Models/HomeIQ.Models.csproj
+++ b/Backend/homeiq-backend/HomeIQ.Models/HomeIQ.Models.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Profiles\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
