--- a/Backend/homeiq-backend/HomeIQ.Services/HomeIQ.Services.csproj
+++ b/Backend/homeiq-backend/HomeIQ.Services/HomeIQ.Services.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
