--- a/Backend/HomeIq/api/appsettings.json
+++ b/Backend/HomeIq/api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=HomeIq;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=tcp:azure-sql-server8team.database.windows.net,1433;Initial Catalog=HomeIQ;Persist Security Info=False;User ID=sql.db.admin;Password=proiectproiect8P;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
